--- a/CodeDemonstration.ipynb
+++ b/CodeDemonstration.ipynb
@@ -415,7 +415,7 @@
    "source": [
     "## Conversion of CT-images to Elastic Properties volumes\n",
     "\n",
-    "(Please run the code in the full dataset). Now, after the CT-number of the pseudotargets have beeen defined we convert the CT-images into density image according to equation (3) in the manuscript. Then, subsequential transformations could be performed."
+    "(Please run the code in the full dataset). Now, after the CT-number of the pseudotargets have beeen defined we convert the CT-images into density image according to equation (3) in the manuscript. Then, subsequential transformations could be performed, accordingly. Finally, the elastic properties volume (K_volume and G_volume) could be used for numerical simulations such as wave propagations. "
    ]
   },
   {
